src/test/deca/avecObjet/valid/method_call_on_new_object.deca
// Description :
//    Appel de méthode sur un objet créé avec new.
//
// Resultats :
//    1

class A {
    int f() {
        return 1;
    }
}

{
    println((new A()).f());
}

