src/test/deca/avecObjet/invalid/method_overload_not_allowed_same_name.deca
// Description :
//    Deux méthodes avec le même nom mais signatures différentes (surcharge interdite).
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x) {
        return x;
    }
    int f(float x) {
        return 1;
    }
}

{
}

